--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -201,6 +201,21 @@ on the other hand, will be low. Entropy, therefore, is a measure of
 how broad the participant's exploration of the state space is in a given
 interaction.
 
+\section{A Corpus of Musical Touch-Screen Interactions}
+
+In the following sections, we will use transition matrices, flux, and
+entropy to analyse a corpus of data collected as part of our research
+into collaborative interactions with musical touch-screen tablet
+interfaces. In a period of more than two years (April 2013 - June 2015), we have
+collected data from $135$ sessions where various participants used
+musical touch-screen interfaces on Apple iPad devices. These sessions
+had a number of contexts including rehearsals, performances, lab study
+sessions, classes, and casual demonstrations. Participants performed
+free improvisations as well as written compositions, performed on
+iPads alone and in setups of iPads and acoustic percussion
+instruments. The median length of these sessions was 7:32 and the
+median number of participants was four.
+
 \section{Modelling Performer Ratings with Flux and Entropy}
 
 \begin{figure}
@@ -249,6 +264,8 @@ It is notable that these questions (3, 6, and 7) all pertain to the
 uses the flux measure to trigger new-idea messages, it appears that
 performers appreciated its intervention more in particularly creative
 performances where flux and entropy were high.
+
+
 
 
 
