added a few refs

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -136,6 +136,12 @@ highly when engaged in adventurous, exploratory performance.
 
 \section{Related Work}
 
+\begin{itemize}
+\item Using Markov chains and transition matrices for usability
+  modelling~\cite{Thimbleby:2001kq,Thimbleby:2004fj}
+\item coding livecoding~\cite{Swift:2014tya}
+\end{itemize}
+
 \section{Transition Matrices and Matrix Measures}
 
 It has been recognised that collaborative interactions such as
@@ -207,14 +213,17 @@ In the following sections, we will use transition matrices, flux, and
 entropy to analyse a corpus of data collected as part of our research
 into collaborative interactions with musical touch-screen tablet
 interfaces. In a period of more than two years (April 2013 - June 2015), we have
-collected data from $135$ sessions where various participants used
-musical touch-screen interfaces on Apple iPad devices. These sessions
-had a number of contexts including rehearsals, performances, lab study
+collected data from $139$ sessions where various participants used
+musical touch-screen interfaces on Apple iPad devices. Each session
+took place in a number of contexts including rehearsals, performances, lab study
 sessions, classes, and casual demonstrations. Participants performed
-free improvisations as well as written compositions, performed on
-iPads alone and in setups of iPads and acoustic percussion
-instruments. The median length of these sessions was 7:32 and the
-median number of participants was four.
+free improvisations as well as written compositions and performed on
+iPads alone or using setups of iPads and acoustic percussion
+instruments. The median length of these sessions was 7m32s (minimum was
+1m0s and maximum was 26m) and the
+median number of participants was four (minimum 1, maximum 9).
+
+
 
 \section{Modelling Performer Ratings with Flux and Entropy}
 
