--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -34,6 +34,55 @@
 }
 
 
+@inproceedings{Swift:2014tya,
+	Author = {Swift, Ben and Sorensen, Andrew and Martin, Michael and Gardner, Henry J},
+	Booktitle = {Proc. CHI '14},
+	Date-Added = {2015-01-20 05:33:18 +0000},
+	Date-Modified = {2015-01-20 05:33:18 +0000},
+	Publisher = {ACM Press},
+	Title = {{Coding Livecoding}},
+	Year = 2014
+ }
+
+
+@article{Thimbleby:2001kq,
+	Acmid = 376941,
+	Address = {New York, NY, USA},
+	Author = {Thimbleby, Harold and Cairns, Paul and Jones, Matt},
+	Issn = {1073-0516},
+	Issue_Date = {June 2001},
+	Journal = {ACM Trans. Comput.-Hum. Interact.},
+	Keywords = {Markov models, usability analysis},
+	Month = jun,
+	Number = 2,
+	Numpages = 34,
+	Pages = {99--132},
+	Publisher = {ACM},
+	Title = {Usability Analysis with Markov Models},
+	Volume = 8,
+	Year = 2001
+  }
+
+
+@article{Thimbleby:2004fj,
+	Acmid = {1005364},
+	Address = {New York, NY, USA},
+	Author = {Thimbleby, Harold},
+	Issn = {1073-0516},
+	Issue_Date = {June 2004},
+	Journal = {ACM Trans. Comput.-Hum. Interact.},
+	Keywords = {Matrix algebra, feature interaction, usability analysis, user interface design},
+	Month = jun,
+	Number = {2},
+	Numpages = {56},
+	Pages = {181--236},
+	Publisher = {ACM},
+	Title = {User Interface Design with Matrix Algebra},
+	Volume = {11},
+	Year = {2004}
+ }
+
+
 @book{Venables:2002qv,
 	Author = {Venables, William N and Ripley, Brian D},
 	Date-Added = {2015-08-24 11:44:39 +0000},
