yes! some more results in the aov

--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -12,12 +12,12 @@
 	Date-Modified = {2015-08-24 11:43:23 +0000},
 	Journal = {Presence: Teleoper. Virtual Environ.},
 	Month = aug,
-	Number = {4},
+	Number = 4,
 	Pages = {439--446},
 	Publisher = {MIT Press},
 	Title = {Analyzing Ordinal Scales in Studies of Virtual Environments: Likert or Lump It!},
-	Volume = {16},
-	Year = {2007}}
+	Volume = 16,
+	Year = 2007}
 
 
 @article{Shannon:1948rt,
@@ -65,7 +65,7 @@
 
 
 @article{Thimbleby:2004fj,
-	Acmid = {1005364},
+	Acmid = 1005364,
 	Address = {New York, NY, USA},
 	Author = {Thimbleby, Harold},
 	Issn = {1073-0516},
@@ -73,21 +73,22 @@
 	Journal = {ACM Trans. Comput.-Hum. Interact.},
 	Keywords = {Matrix algebra, feature interaction, usability analysis, user interface design},
 	Month = jun,
-	Number = {2},
-	Numpages = {56},
+	Number = 2,
+	Numpages = 56,
 	Pages = {181--236},
 	Publisher = {ACM},
 	Title = {User Interface Design with Matrix Algebra},
-	Volume = {11},
-	Year = {2004}
+	Volume = 11,
+	Year = 2004
  }
+
 
 
 @book{Venables:2002qv,
-	Author = {Venables, William N and Ripley, Brian D},
+	Author = {Venables, William N. and Ripley, Brian D.},
 	Date-Added = {2015-08-24 11:44:39 +0000},
-	Date-Modified = {2015-08-24 11:44:42 +0000},
+	Date-Modified = {2015-08-26 07:04:32 +0000},
 	Publisher = {Springer},
 	Title = {Modern applied statistics with S},
-	Year = {2002}
- }
+	Year = 2002}
+
