new calculations for other matrix measures

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -213,15 +213,62 @@ In the following sections, we will use transition matrices, flux, and
 entropy to analyse a corpus of data collected as part of our research
 into collaborative interactions with musical touch-screen tablet
 interfaces. In a period of more than two years (April 2013 - June 2015), we have
-collected data from $139$ sessions where various participants used
+collected data from $150$ sessions where various participants used
 musical touch-screen interfaces on Apple iPad devices. Each session
 took place in a number of contexts including rehearsals, performances, lab study
 sessions, classes, and casual demonstrations. Participants performed
 free improvisations as well as written compositions and performed on
 iPads alone or using setups of iPads and acoustic percussion
-instruments. The median length of these sessions was 7m32s (minimum was
+instruments. The median length of these sessions was 7m28s (minimum was
 1m0s and maximum was 26m) and the
-median number of participants was four (minimum 1, maximum 9).
+median number of participants was four (minimum 1, maximum 7).
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/sessions-count}
+  \caption{
+    \label{fig:count-data}}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/flux-boxplot}
+  \caption{
+    \label{fig:flux-boxplot}}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/entropy-boxplot}
+  \caption{
+    \label{fig:entropy-boxplot}}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/flux-entropy-distribution}
+  \caption{
+    \label{fig:flux-entropy-distribution}}
+\end{figure}
+
+A three-way ANOVA procedure was performed on the data set to find
+whether performance context, type, and instrumentation could predict
+the entropy and flux values.
+
+Using performative sessions only (i.e. not the demonstration
+sessions). We found a significant main effect on flux due to
+performance type ($F(1,86) = 5.87, p < 0.05$), and interaction
+effect due to performance type and instrumentation ($F(1,86) = 12.37, p
+< 0.001$). Similar effects on entropy were found due to performance
+type ($F(1,86) = 13.62, p < 0.001$) and an interaction effect due to
+performance type and instrumentation ($F(1,86) = 4.98, p < 0.05$). The
+effect on entropy due to performance context (rehearsal,
+performance, or study) was not found to be significant at $\alpha =
+0.05$, ($F(2,86) = 2.11, p = 0.128$). When including demonstration
+sessions in the analysis, however, performance context was found to
+have a significant main effect on entropy ($F(4,138) = 5.07, p <
+0.001$).
+
 
 
 
