--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -34,6 +34,25 @@
 }
 
 
+@article{Breiman:2001kx,
+	Author = {Breiman, Leo},
+	Journal = {Machine Learning},
+	Number = {1},
+	Pages = {5-32},
+	Title = {Random Forests},
+	Volume = {45},
+	Year = {2001}}
+
+
+@article{scikit-learn,
+	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+	Journal = {Journal of Machine Learning Research},
+	Pages = {2825--2830},
+	Title = {Scikit-learn: Machine Learning in {P}ython},
+	Volume = {12},
+	Year = {2011}}
+
+
 @inproceedings{Swift:2014tya,
 	Author = {Swift, Ben and Sorensen, Andrew and Martin, Michael and Gardner, Henry J},
 	Booktitle = {Proc. CHI '14},
