added last two analysis sections

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -409,14 +409,38 @@ transition matrices given by each section.
 
 \subsection{Performance styles over time}
 
+While the interaction session in our corpus have many different
+contexts, they are all part of a program of artistic and HCI research
+that has evolved over time. Figures \ref{fig:flux-through-time} and
+\ref{fig:entropy-through-time} show the values of flux and entropy for
+each session in the corpus. Over the course of this research program,
+different ensembles and different activities have been emphasised,
+some of these differences can be seen as clusters of performances with
+similar flux and entropy in the two plots. For instance, the earliest
+series of rehearsals and performances had flux between 0.05 and 0.15,
+while the period of activity after July 2014 had flux between 0.1 and
+0.25. This change corresponded with an intensive series of study
+sessions and rehearsals where the participants developed a more
+fluctuating style of performance. The entropy between these two
+periods, however, remains at a similiar level, showing the the space
+of available gestures that the performers explored was more constant.
+
 \begin{figure}
   \centering
   \includegraphics[width=\linewidth]{figures/flux-through-time}
-  \caption{Distribution flux values of sessions through time.
+  \caption{Distribution of flux values of sessions through time.
     Different performance styles are visible as clusters of similar
     flux regardless of performance context.
     \label{fig:flux-through-time}}
 \end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/entropy-through-time}
+  \caption{Distribution of entropy values of sessions through time.
+    \label{fig:entropy-through-time}}
+\end{figure}
+
 
 \section{Conclusions}
 
