added todos for the rest of the day

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -305,12 +305,6 @@ session. These chains can be used to create $9 /times 9$
 gesture-transition matrices for individual performers, and the whole
 ensemble in each session.
 
-
-
-% While musical interactions such as those in
-% our corpus are often analysed using qualitative methods, it is
-% problematic to 
-
 While the interaction sessions recorded in our corpus were performed
 by many different participants with varying experience levels, in
 different contexts and on different instrumental setups, the common
@@ -357,7 +351,7 @@ present in performance contexts, types and
 instrumentations are reflected in the values of flux and entropy of
 their transition matrices.
 
-% need to add overall contrasts column to do pairwise t-tests.
+% todo need to add overall contrasts column to do pairwise t-tests.
 
 \begin{figure}
   \centering
@@ -403,8 +397,9 @@ structure fits session in our corpus, we can divide the
 gestural-sequences of each session into thirds and calculate the
 transition matrices given by each section.
 
+% todo add the plots here.
 
-
+% todo add the results from the plots.
 
 
 \subsection{Performance styles over time}
@@ -441,8 +436,11 @@ of available gestures that the performers explored was more constant.
     \label{fig:entropy-through-time}}
 \end{figure}
 
+% todo add anymore results from these plots
 
 \section{Conclusions}
+
+% todo blah de blah
 
 % \section{Modelling Performer Ratings with Flux and Entropy}
 
