adding lots of plots

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -401,6 +401,20 @@ transition matrices given by each section.
 
 % todo add the results from the plots.
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/section-flux}
+  \caption{
+    \label{fig:section-flux}}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{figures/section-entropy}
+  \caption{
+    \label{fig:section-entropy}}
+\end{figure}
+
 
 \subsection{Performance styles over time}
 
